Cleaned up the examples, added more information to README