@@ -28,6 +28,34 @@ Types of modules:
 	- Exports nothing
 
 
+```
+Usage: javac <options> <source files>
+where possible options include:
+  @<filename>                  Read options and filenames from file
+  -Akey[=value]                Options to pass to annotation processors
+  --add-modules <module>(,<module>)*
+        Root modules to resolve in addition to the initial modules, or all modules
+        on the module path if <module> is ALL-MODULE-PATH.
+  -d <directory>               Specify where to place generated class files
+  --limit-modules <module>(,<module>)*
+        Limit the universe of observable modules
+  --module <module-name>, -m <module-name>
+        Compile only the specified module, check timestamps
+  --module-path <path>, -p <path>
+        Specify where to find application modules
+  --module-source-path <module-source-path>
+        Specify where to find input source files for multiple modules
+  --module-version <version>
+        Specify version of modules that are being compiled
+  --release <release>
+        Compile for a specific VM version. Supported targets: 6, 7, 8, 9
+  -s <directory>               Specify where to place generated source files
+  --source-path <path>, -sourcepath <path>
+        Specify where to find input source files
+  --system <jdk>|none          Override location of system modules
+  --upgrade-module-path <path>
+        Override location of upgradeable modules
+```
 
 ## Basic hello world Module
 
@@ -59,11 +87,11 @@ public class Hello
 ```
 
 ```
-$ javac -d mods/hello --module-path hello src/hello/module-info.java src/hello/com/folkol/Hello.java
+$ javac -d mods/hello src/hello/module-info.java src/hello/com/folkol/Hello.java
 ```
 
 ```
-$ java --module-path mods/hello -m hello/com.folkol.Hello
+$ java --module-path mods -m hello/com.folkol.Hello
 hello, world!
 ```
 
@@ -72,7 +100,7 @@ hello, world!
 N.b. Two modules does not seem to be able to export the same packages. Nor export empty packages.
 
 ```
-$ javac -d mods/greeter --module-path src/greeter src/greeter/module-info.java src/greeter/com/folkol/greeter/Greeter.java
+$ javac -d mods/greeter src/greeter src/greeter/module-info.java src/greeter/com/folkol/greeter/Greeter.java
 
 $ cat src/greeter/module-info.java
 module greeter {
@@ -91,7 +119,7 @@ public class Greeter
 ```
 
 ```
-$ javac -d mods/hello --module-path src/hello:mods/greeter src/hello/module-info.java src/hello/com/folkol/hello/Hello.java
+$ javac -d mods/hello --module-path mods src/hello/module-info.java src/hello/com/folkol/hello/Hello.java
 
 $ cat src/hello/module-info.java
 module hello {
@@ -113,12 +141,19 @@ public class Hello
 ```
 
 ```
-$ java --module-path mods/hello:mods/greeter -m hello/com.folkol.hello.Hello
+$ java --module-path mods -m hello/com.folkol.hello.Hello
 Hello, world!
 ```
 
 ## Hello world, Enterprise Edition
 
+```
+
+```
+
+```
+$ javac -d mods --module-source-path src/ $(find src -name "*.java")
+```
 
 ## References
 
